--- a/app/Views/pages/widgets.html
+++ b/app/Views/pages/widgets.html
@@ -11,7 +11,7 @@
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="../distku/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -56,7 +56,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+              <img src="../distku/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Brad Diesel
@@ -72,7 +72,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../distku/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   John Pierce
@@ -88,7 +88,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../distku/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Nora Silvester
@@ -144,7 +144,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="../index3.html" class="brand-link">
-      <img src="../dist/img/AdminLTELogo.png"
+      <img src="../distku/img/AdminLTELogo.png"
            alt="AdminLTE Logo"
            class="brand-image img-circle elevation-3"
            style="opacity: .8">
@@ -156,7 +156,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="../distku/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block">Alexander Pierce</a>
@@ -1591,7 +1591,7 @@
                       <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user1-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
@@ -1607,7 +1607,7 @@
                       <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user3-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
@@ -1623,7 +1623,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg">
+                        <img class="contacts-list-img" src="../distku/img/user1-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -1686,7 +1686,7 @@
                       <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user1-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
@@ -1702,7 +1702,7 @@
                       <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user3-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
@@ -1718,7 +1718,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg">
+                        <img class="contacts-list-img" src="../distku/img/user1-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -1781,7 +1781,7 @@
                       <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user1-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
@@ -1797,7 +1797,7 @@
                       <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user3-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
@@ -1813,7 +1813,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg">
+                        <img class="contacts-list-img" src="../distku/img/user1-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -1876,7 +1876,7 @@
                       <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user1-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
@@ -1892,7 +1892,7 @@
                       <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image">
+                    <img class="direct-chat-img" src="../distku/img/user3-128x128.jpg" alt="Message User Image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
@@ -1908,7 +1908,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg">
+                        <img class="contacts-list-img" src="../distku/img/user1-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -1954,7 +1954,7 @@
               <!-- Add the bg color to the header using any of the bg-* classes -->
               <div class="widget-user-header bg-warning">
                 <div class="widget-user-image">
-                  <img class="img-circle elevation-2" src="../dist/img/user7-128x128.jpg" alt="User Avatar">
+                  <img class="img-circle elevation-2" src="../distku/img/user7-128x128.jpg" alt="User Avatar">
                 </div>
                 <!-- /.widget-user-image -->
                 <h3 class="widget-user-username">Nadia Carmichael</h3>
@@ -1997,7 +1997,7 @@
                 <h5 class="widget-user-desc">Founder & CEO</h5>
               </div>
               <div class="widget-user-image">
-                <img class="img-circle elevation-2" src="../dist/img/user1-128x128.jpg" alt="User Avatar">
+                <img class="img-circle elevation-2" src="../distku/img/user1-128x128.jpg" alt="User Avatar">
               </div>
               <div class="card-footer">
                 <div class="row">
@@ -2037,12 +2037,12 @@
             <div class="card card-widget widget-user">
               <!-- Add the bg color to the header using any of the bg-* classes -->
               <div class="widget-user-header text-white"
-                   style="background: url('../dist/img/photo1.png') center center;">
+                   style="background: url('../distku/img/photo1.png') center center;">
                 <h3 class="widget-user-username text-right">Elizabeth Pierce</h3>
                 <h5 class="widget-user-desc text-right">Web Designer</h5>
               </div>
               <div class="widget-user-image">
-                <img class="img-circle" src="../dist/img/user3-128x128.jpg" alt="User Avatar">
+                <img class="img-circle" src="../distku/img/user3-128x128.jpg" alt="User Avatar">
               </div>
               <div class="card-footer">
                 <div class="row">
@@ -2086,7 +2086,7 @@
             <div class="card card-widget">
               <div class="card-header">
                 <div class="user-block">
-                  <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                  <img class="img-circle" src="../distku/img/user1-128x128.jpg" alt="User Image">
                   <span class="username"><a href="#">Jonathan Burke Jr.</a></span>
                   <span class="description">Shared publicly - 7:30 PM Today</span>
                 </div>
@@ -2103,7 +2103,7 @@
               </div>
               <!-- /.card-header -->
               <div class="card-body">
-                <img class="img-fluid pad" src="../dist/img/photo2.png" alt="Photo">
+                <img class="img-fluid pad" src="../distku/img/photo2.png" alt="Photo">
 
                 <p>I took this photo this morning. What do you guys think?</p>
                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-share"></i> Share</button>
@@ -2114,14 +2114,14 @@
               <div class="card-footer card-comments">
                 <div class="card-comment">
                   <!-- User image -->
-                  <img class="img-circle img-sm" src="../dist/img/user3-128x128.jpg" alt="User Image">
+                  <img class="img-circle img-sm" src="../distku/img/user3-128x128.jpg" alt="User Image">
 
                   <div class="comment-text">
                     <span class="username">
                       Maria Gonzales
                       <span class="text-muted float-right">8:03 PM Today</span>
                     </span><!-- /.username -->
-                    It is a long established fact that a reader will be distracted
+                    It is a long established fact that a reader will be distkuracted
                     by the readable content of a page when looking at its layout.
                   </div>
                   <!-- /.comment-text -->
@@ -2129,14 +2129,14 @@
                 <!-- /.card-comment -->
                 <div class="card-comment">
                   <!-- User image -->
-                  <img class="img-circle img-sm" src="../dist/img/user4-128x128.jpg" alt="User Image">
+                  <img class="img-circle img-sm" src="../distku/img/user4-128x128.jpg" alt="User Image">
 
                   <div class="comment-text">
                     <span class="username">
                       Luna Stark
                       <span class="text-muted float-right">8:03 PM Today</span>
                     </span><!-- /.username -->
-                    It is a long established fact that a reader will be distracted
+                    It is a long established fact that a reader will be distkuracted
                     by the readable content of a page when looking at its layout.
                   </div>
                   <!-- /.comment-text -->
@@ -2146,7 +2146,7 @@
               <!-- /.card-footer -->
               <div class="card-footer">
                 <form action="#" method="post">
-                  <img class="img-fluid img-circle img-sm" src="../dist/img/user4-128x128.jpg" alt="Alt Text">
+                  <img class="img-fluid img-circle img-sm" src="../distku/img/user4-128x128.jpg" alt="Alt Text">
                   <!-- .img-push is used to add margin to elements next to floating images -->
                   <div class="img-push">
                     <input type="text" class="form-control form-control-sm" placeholder="Press enter to post comment">
@@ -2163,7 +2163,7 @@
             <div class="card card-widget">
               <div class="card-header">
                 <div class="user-block">
-                  <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                  <img class="img-circle" src="../distku/img/user1-128x128.jpg" alt="User Image">
                   <span class="username"><a href="#">Jonathan Burke Jr.</a></span>
                   <span class="description">Shared publicly - 7:30 PM Today</span>
                 </div>
@@ -2193,7 +2193,7 @@
 
                 <!-- Attachment -->
                 <div class="attachment-block clearfix">
-                  <img class="attachment-img" src="../dist/img/photo1.png" alt="Attachment Image">
+                  <img class="attachment-img" src="../distku/img/photo1.png" alt="Attachment Image">
 
                   <div class="attachment-pushed">
                     <h4 class="attachment-heading"><a href="http://www.lipsum.com/">Lorem ipsum text generator</a></h4>
@@ -2217,14 +2217,14 @@
               <div class="card-footer card-comments">
                 <div class="card-comment">
                   <!-- User image -->
-                  <img class="img-circle img-sm" src="../dist/img/user3-128x128.jpg" alt="User Image">
+                  <img class="img-circle img-sm" src="../distku/img/user3-128x128.jpg" alt="User Image">
 
                   <div class="comment-text">
                     <span class="username">
                       Maria Gonzales
                       <span class="text-muted float-right">8:03 PM Today</span>
                     </span><!-- /.username -->
-                    It is a long established fact that a reader will be distracted
+                    It is a long established fact that a reader will be distkuracted
                     by the readable content of a page when looking at its layout.
                   </div>
                   <!-- /.comment-text -->
@@ -2232,7 +2232,7 @@
                 <!-- /.card-comment -->
                 <div class="card-comment">
                   <!-- User image -->
-                  <img class="img-circle img-sm" src="../dist/img/user5-128x128.jpg" alt="User Image">
+                  <img class="img-circle img-sm" src="../distku/img/user5-128x128.jpg" alt="User Image">
 
                   <div class="comment-text">
                     <span class="username">
@@ -2240,7 +2240,7 @@
                       <span class="text-muted float-right">8:03 PM Today</span>
                     </span><!-- /.username -->
                     The point of using Lorem Ipsum is that it hrs a morer-less
-                    normal distribution of letters, as opposed to using
+                    normal distkuribution of letters, as opposed to using
                     'Content here, content here', making it look like readable English.
                   </div>
                   <!-- /.comment-text -->
@@ -2250,7 +2250,7 @@
               <!-- /.card-footer -->
               <div class="card-footer">
                 <form action="#" method="post">
-                  <img class="img-fluid img-circle img-sm" src="../dist/img/user4-128x128.jpg" alt="Alt Text">
+                  <img class="img-fluid img-circle img-sm" src="../distku/img/user4-128x128.jpg" alt="Alt Text">
                   <!-- .img-push is used to add margin to elements next to floating images -->
                   <div class="img-push">
                     <input type="text" class="form-control form-control-sm" placeholder="Press enter to post comment">
@@ -2295,8 +2295,8 @@
 <!-- Bootstrap 4 -->
 <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../dist/js/adminlte.min.js"></script>
+<script src="../distku/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="../dist/js/demo.js"></script>
+<script src="../distku/js/demo.js"></script>
 </body>
 </html>
